# Lia-assignment

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  architecture.eraserdiagram  docker-compose.dev.yml  render.yaml  test_output.txt
.vexp/: manifest.json
backend/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  OPTIMIZATION_REPORT.md  Procfile  README.md  alembic.ini  migrate_once.py  pyproject.toml  render.yaml  requirements.txt  test_out.txt  test_output.txt  test_result.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_updated_at_columns.py  003_add_messages_columns.py  004_fix_conversation_id_type.py  005_add_conversation_updated_index.py  006_remove_redundant_user_id_index.py  007_add_sentiment_state_column.py
backend/api/: index.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: __init__.py  deps.py  schemas.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  health.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py  tasks.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/services/: __init__.py  cache.py  chat.py  llm.py  rate_limit.py  sentiment.py
backend/app/services/cache/: __init__.py  base.py  constants.py  conversation.py  service.py  user.py
backend/tests/: conftest.py  test_auth.py  test_auth_api.py  test_cache.py  test_cache_service.py  test_chat_api.py  test_chat_sentiment.py  test_chat_service.py  test_chat_thinking.py  test_config.py  test_deps.py  test_exceptions.py  test_health.py  test_health_api.py  test_llm_service.py  test_llm_thinking.py  test_middleware.py  test_rate_limit.py  test_schemas.py  test_security.py  test_sentiment.py
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  test-results.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  setupTests.ts  setupTests.tsx
frontend/src/__tests__/: AuthPage.test.tsx  AuthProvider.test.tsx  ChatInput.test.tsx  ChatInspector.test.tsx  ChatSidebar.test.tsx  Integration.test.tsx  MarkdownMessage.test.tsx  MessageList.test.tsx  ModelSelector.test.tsx  UIComponents.test.tsx  api.test.ts  test-utils.tsx  useChat.test.ts  utils.test.ts
frontend/src/components/: AuthPage.tsx  MarkdownMessage.tsx
frontend/src/components/__tests__/: ChatInterface.test.tsx
frontend/src/components/ai-elements/: index.ts  model-data.ts  model-selector.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatInspector.tsx  ChatInterface.tsx  ChatSidebar.tsx  MessageList.tsx  ModelSettingsDialog.tsx
frontend/src/components/ui/: badge.tsx  button-variants.ts  button.tsx  dropdown-menu.tsx  select.tsx
frontend/src/context/: AuthContext.ts  AuthProvider.tsx  index.ts  useAuth.ts
frontend/src/lib/: api.ts  queryKeys.ts  types.ts  useChat.ts  useConversationManagement.ts
