[project]
name = "lia-backend"
version = "2.5.1"
description = "Lia Chatbot Backend - Async FastAPI with Sentiment Analysis & Multi-LLM Support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lia Team" }]
keywords = ["chatbot", "fastapi", "llm", "sentiment-analysis", "async"]

dependencies = [
    # Web Framework
    "fastapi>=0.123.0",
    "uvicorn[standard]>=0.38.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.44",
    "asyncpg>=0.31.0",
    "alembic>=1.17.0",
    # Validation & Settings
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "email-validator>=2.3.0",
    # LLM Providers
    "google-genai>=1.52.0",
    "openai>=2.8.0",
    "orjson>=3.11.0",
    # Sentiment Analysis
    "google-cloud-language>=2.18.0",
    # Caching (Upstash via REST API)
    "upstash-redis>=1.5.0",
    # Security
    "PyJWT>=2.11.0",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0", # Legacy: for verifying existing bcrypt hashes during migration
    # Retry
    "tenacity>=9.1.0",
    # HTTP Client
    "httpx>=0.28.1",
    # Observability
    "structlog>=25.5.0",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
prod = [
    "granian>=2.7.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
dev = "app.cli:dev"
start = "app.cli:start"
prod = "app.cli:prod"
prod-granian = "app.cli:prod_granian"
migrate = "app.cli:migrate"
pytest = "app.cli:pytest"


[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "aiosqlite>=0.21.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
